--- a/fake_news_detection/fake_news.ipynb
+++ b/fake_news_detection/fake_news.ipynb
@@ -286,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So with this model, we have 589 true positives, 587 true negatives, 42 false positives, and 49 false negatives."
+    "So with this model, we have 589 true positives, 587 true negatives, 42 false positives, and 49 false negatives.\n"
    ]
   }
  ],
