--- a/Handwritten Digit Recognition/HDR.ipynb
+++ b/Handwritten Digit Recognition/HDR.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,8 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, Flatten\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
-    "from keras import backend as K"
+    "from keras import backend as K\n",
+    "from keras.models import load_model"
    ]
   },
   {
@@ -266,11 +267,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In this mini project, we are able to test our handwritten digit recognition. However, the accuracy is not attracting which mean there is more room to improve it such as hyperparameter tuning."
+   ]
   }
  ],
  "metadata": {
