--- a/Handwritten Digit Recognition/HDR.ipynb
+++ b/Handwritten Digit Recognition/HDR.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "The handwritten digit recognition is the ability of computers to recognize human handwritten digits. It is a hard tast for the machine becuase handwritten digigits are not perfect and can be made with many different flavors. The handwritten digit recognition is the solution to this problem which uses the image of a digit and recognize the digit present in the image.\n",
     "\n",
-    "In this mini project, we are going to implement a handwritten digit recognition app using the MNIST dataset. We will be using a special type of deep neural network that is Convolutional Neural Networks. In the end, we are going to build a GUI in which you can draw the digit and recognize it straight away."
+    "In this mini project, we are going to implement a handwritten digit recognition app using the MNIST dataset. We will be using a special type of deep neural network that is Convolutional Neural Networks."
    ]
   },
   {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,8 @@
     "from keras.layers import Dense, Dropout, Flatten\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
     "from keras import backend as K\n",
-    "from keras.models import load_model"
+    "from keras.models import load_model\n",
+    "from keras.utils import np_utils"
    ]
   },
   {
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
